# latticedb

./: .gitignore  CONTRIBUTING.md  README.md  build.zig  build.zig.zon
.github/workflows/: benchmark.yml  ci.yml  container-tests.yml  docs.yml  release.yml  website.yml
bindings/go/: README.md  db.go  embedding.go  embedding_package_test.go  errors.go  go.mod  integration_test.go  stream_test.go  tx.go  types.go
bindings/go/embedding/: embedding.go
bindings/python/: MANIFEST.in  README.md  build_native.py  pyproject.toml  setup.py
bindings/python/src/lattice/: __init__.py  _bindings.py  database.py  transaction.py  types.py
bindings/python/src/latticedb/: __init__.py  _bindings.py  database.py  embedding.py  transaction.py  types.py
bindings/python/src/latticedb/lib/: .gitkeep
bindings/python/tests/: test_basic.py  test_integration.py
bindings/typescript/: .eslintrc.json  .npmignore  CMakeLists.txt  README.md  binding.gyp  jest.config.js  package-lock.json  package.json  tsconfig.json
bindings/typescript/coverage/: clover.xml  coverage-final.json  lcov.info
bindings/typescript/coverage/lcov-report/: index.html
bindings/typescript/coverage/lcov-report/src/: database.ts.html  embedding.ts.html  index.html  index.ts.html  transaction.ts.html  types.ts.html
bindings/typescript/coverage/lcov-report/src/ffi/: bindings.ts.html  index.html  index.ts.html  library.ts.html
bindings/typescript/scripts/: bundle-native.js  clean-native.js
bindings/typescript/src/: database.ts  embedding.ts  index.ts  native.ts  transaction.ts  types.ts
bindings/typescript/src/ffi/: bindings.ts  index.ts  library.ts  types.ts
bindings/typescript/src/native/: addon.cpp
bindings/typescript/tests/: basic.test.ts  integration.test.ts
book/: book.toml
book/src/: SUMMARY.md  custom.css  index.md
book/src/api/: c.md  python.md  typescript.md
book/src/architecture/: btree.md  full-text-search.md  graph-storage.md  overview.md  recovery.md  transaction-manager.md  vector-search.md  wal.md
book/src/cypher/: aggregations.md  full-text-search.md  functions.md  match.md  merge.md  mutations.md  overview.md  parameters.md  return.md  unwind.md  variable-length-paths.md  vector-search.md  where.md  with.md
book/src/development/: building.md  contributing.md  releasing.md  testing.md
book/src/getting-started/: concepts.md  installation.md  quickstart.md  when-to-use.md
book/src/guides/: data-export.md  durable-streams.md  embeddings.md  full-text-search.md  knowledge-graph.md  performance-tuning.md  rag-system.md  transactions.md
book/src/performance/: benchmarks.md  competitive-analysis.md
conformance/go/: README.md  crash_export_test.go  driver_latticedb_test.go  exporter_test.go  go.mod  recovery_test.go  suite_test.go
docs/: 00_introduction.md  01_virtual_file_system.md  02_page_manager.md  03_buffer_pool.md  05_write_ahead_log.md  06_transaction_manager.md  07_checkpointing.md  08_recovery.md  09_graph_storage.md  10_vector_search.md  11_full_text_search.md  12_query_execution.md  13_engine_conformance.md  14_durable_streams.md  c_api_nested_values.md  client_api_migration.md  getting_started.md  property_index_design.md  release_notes_0.8.0.md  release_notes_0.8.2.md  release_notes_0.8.4.md  release_notes_0.8.5.md  release_notes_0.8.6.md  release_notes_0.8.7.md  release_notes_0.9.0.md  release_notes_0.9.5.md  release_notes_0.9.6.md  release_notes_next.md
examples/: README.md  papers.json
examples/cli/: README.md  authored_docs.cypher  people_graph.json
examples/go/: go.mod  main.go
examples/python/: paper_graph_rag.py  pyproject.toml
examples/ts/: package-lock.json  package.json  paper_graph_rag.ts  tsconfig.json
include/: lattice.h
scripts/: bump_version.py  prepare_release.sh
src/: compat.zig  main.zig
src/api/: c_api.zig
src/cli/: args.zig  history.zig  import_export.zig  main.zig  output.zig  repl.zig
src/concurrency/: locking.zig
src/core/: types.zig
src/fts/: dictionary.zig  fuzzy.zig  highlight.zig  index.zig  posting.zig  prefix.zig  reverse_index.zig  scorer.zig  stemmer.zig  stopwords.zig  tokenizer.zig
src/graph/: adjacency_cache.zig  edge.zig  label_index.zig  node.zig  symbols.zig
src/query/: ast.zig  cache.zig  executor.zig  expression.zig  lexer.zig  parser.zig  planner.zig  semantic.zig
src/query/operators/: aggregate.zig  cross_product.zig  distinct.zig  expand.zig  filter.zig  fts.zig  key_encoding.zig  limit.zig  materialize.zig  mutation.zig  project.zig  scan.zig  source.zig  unwind.zig  var_expand.zig  vector.zig
src/storage/: btree.zig  buffer_pool.zig  checkpoint.zig  database.zig  page.zig  page_manager.zig  recovery.zig  vfs.zig  wal.zig
src/stream/: payload.zig  store.zig
src/transaction/: manager.zig  mvcc.zig  wal_payload.zig
src/vector/: distance.zig  embedding.zig  hash_embed.zig  hnsw.zig  storage.zig
tests/benchmark/: fts_index_benchmark.zig  graph_dfs_benchmark.zig  main.zig  sqlite_comparison.zig  stress_test.zig  vector_benchmark.zig
tests/container/: Dockerfile.alpine-3.19  Dockerfile.debian-bookworm  Dockerfile.fedora-40  Dockerfile.ubuntu-22.04  Dockerfile.ubuntu-24.04  docker-compose.yml  run-all.sh
tests/container/c-test/: test_load_lib.c
tests/container/fixtures/: sample-graph.json  test-queries.cypher
tests/container/scripts/: helpers.sh  run-suite.sh  test-cli.sh  test-python.sh  test-shared-lib.sh  (+1 more)
tests/crash/: crash_test.zig  main.zig
tests/fuzz/: btree_fuzz.zig  hnsw_fuzz.zig  main.zig  parser_fuzz.zig  symbol_fuzz.zig  traversal_fuzz.zig  wal_fuzz.zig
tests/integration/: database_test.zig  embedding_test.zig  import_export_test.zig  main.zig  mvcc_test.zig  query_mutation_test.zig  stream_test.zig
tests/unit/: btree_test.zig  buffer_pool_test.zig  c_api_test.zig  concurrency_test.zig  graph_test.zig  helpers.zig  main.zig  page_manager_test.zig  query_test.zig  quipu_longmemeval_repro.zig  search_test.zig  stream_store_test.zig  transaction_test.zig  wal_test.zig
website/: index.html
website/assets/: quickstart-graph.dot
website/experimental/: index.html
(+6 files in other folders)
