[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latticedb"
version = "0.4.2"
description = "Embedded single-file property-graph database with vector and BM25 full-text search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jeff Hajewski", email = "jeff.hajewski@gmail.com"},
]
maintainers = [
    {name = "Jeff Hajewski", email = "jeff.hajewski@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["database", "graph", "property-graph", "vector", "full-text", "embedded", "cypher", "hnsw", "bm25"]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jeffhajewski/latticedb"
Documentation = "https://latticedb.org"
Repository = "https://github.com/jeffhajewski/latticedb"
Issues = "https://github.com/jeffhajewski/latticedb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
latticedb = [
    "lib/*.so",
    "lib/*.dylib",
    "lib/*.dll",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100
